# booking

./: .gitignore  Makefile  README.md  pyproject.toml  test_main.http
apps/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/fixtures/: rooms.json
apps/migrations/: 0001_initial.py  0002_resident_book.py  0003_alter_book_options.py
apps/utils/: exceptions.py  pagination.py
root/: asgi.py  settings.py  wsgi.py
